[feat] - update ExternalProductRepositoryImpl