@@ -4,16 +4,18 @@ import com.appstack.wishlist.adapter.external.dto.ExternalProductResponse;
 import com.appstack.wishlist.adapter.mapper.ExternalProductMapper;
 import com.appstack.wishlist.domain.model.ExternalProduct;
 import com.appstack.wishlist.domain.repository.ExternalProductRepository;
+import com.appstack.wishlist.exception.PreconditionFailedException;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Repository;
+import org.springframework.util.ObjectUtils;
 import org.springframework.web.client.RestTemplate;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
@@ -32,11 +34,16 @@ public class ExternalProductRepositoryImpl implements ExternalProductRepository 
             String json = objectMapper.writeValueAsString(ids);
             ExternalProductResponse[] externalProducts =
                     restTemplate.postForObject(url, json, ExternalProductResponse[].class);
+
+            if (ObjectUtils.isEmpty(externalProducts)) {
+                return new ArrayList<>();
+            }
+
             return Arrays.stream(externalProducts)
                     .map(externalProductMapper::toDomain)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (JsonProcessingException e) {
-            throw new RuntimeException(e);
+            throw new PreconditionFailedException(e.getMessage());
         }
     }
 }
